Input [FIX] Fixes input on IE + minor refactoring of ui-select

--- a/src/core/elements/_input.less
+++ b/src/core/elements/_input.less
@@ -44,6 +44,11 @@
 .lui.input > input {
 	padding: 0 @h-padding;
 	line-height: (1em + 2 * @v-padding);
+
+	// Fix for Internet Explorer
+	box-sizing: border-box;
+	height: (1em + 2 * @v-padding);
+
 	display: inline-block;
 	.flex();
 }
